<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org" xmlns:xsi="http://www.w3.org" xsi:schemaLocation="http://maven.apache.org https://maven.apache.org">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.2</version>
    </parent>
    <groupId>nl.surf</groupId>
    <artifactId>polynsi</artifactId>
    <version>0.3.4-SNAPSHOT</version>

    <properties>
        <java.version>21</java.version>
        <cxf.version>4.1.4</cxf.version>
        <cxf.xjc.version>4.0.2</cxf.xjc.version>
        <!-- Keep these synced -->
        <protoc.version>4.33.4</protoc.version>
        <grpc.version>1.75.0</grpc.version>
        <spring-grpc.version>1.0.1</spring-grpc.version>
    </properties>

    <scm>
        <developerConnection>scm:git:git@github.com:workfloworchestrator/PolyNSI</developerConnection>
        <tag>HEAD</tag>
    </scm>
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/workfloworchestrator/PolyNSI</url>
        </repository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <!-- Official Spring gRPC BOM -->
            <dependency>
                <groupId>org.springframework.grpc</groupId>
                <artifactId>spring-grpc-dependencies</artifactId>
                <version>${spring-grpc.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Force Protobuf runtime to match compiler version exactly -->
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>${protoc.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Spring Boot Starters -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-tomcat</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jetty</artifactId>
        </dependency>

        <!-- Official Spring gRPC Starters (versions managed by BOM) -->
        <dependency>
            <groupId>org.springframework.grpc</groupId>
            <artifactId>spring-grpc-spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.grpc</groupId>
            <artifactId>spring-grpc-client-spring-boot-starter</artifactId>
        </dependency>

        <!-- gRPC Core Components (no explicit versions, let BOM handle them) -->
        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-netty</artifactId>
        </dependency>
        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-protobuf</artifactId>
        </dependency>
        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-stub</artifactId>
        </dependency>
        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-services</artifactId>
        </dependency>

       <!-- Protobuf utilities -->
        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java-util</artifactId>
            <version>${protoc.version}</version>
        </dependency>

        <!-- CXF (SOAP Implementation) -->
        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-spring-boot-starter-jaxws</artifactId>
            <version>${cxf.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-features-logging</artifactId>
            <version>${cxf.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.cxf.xjc-utils</groupId>
            <artifactId>cxf-xjc-runtime</artifactId>
            <version>${cxf.xjc.version}</version>
        </dependency>

        <!-- Jakarta API baseline for Spring Boot 4 / Jakarta EE 11 -->
        <dependency>
            <groupId>jakarta.xml.ws</groupId>
            <artifactId>jakarta.xml.ws-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>jakarta.jws</groupId>
            <artifactId>jakarta.jws-api</artifactId>
            <version>3.0.0</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>

            <!-- Protobuf Maven Plugin configuration -->
            <plugin>
                <groupId>io.github.ascopes</groupId>
                <artifactId>protobuf-maven-plugin</artifactId>
                <version>4.1.2</version>
                <configuration>
                    <protoc>${protoc.version}</protoc>
                    <plugins>
                        <!-- Updated syntax avoiding deprecated binaryMavenPlugins -->
                        <plugin kind="binary-maven">
                            <groupId>io.grpc</groupId>
                            <artifactId>protoc-gen-grpc-java</artifactId>
                            <version>${grpc.version}</version>
                        </plugin>
                    </plugins>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Standard Spring Boot Maven Plugin, managed version -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>

            <!-- Compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${java.version}</release>
                    <parameters>true</parameters> <!-- Helpful for Spring Boot 4 reflection -->
                </configuration>
            </plugin>

            <!-- CXF Codegen -->
            <plugin>
                <groupId>org.apache.cxf</groupId>
                <artifactId>cxf-codegen-plugin</artifactId>
                <version>${cxf.version}</version>
                <executions>
                    <execution>
                        <id>generate-sources</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>wsdl2java</goal>
                        </goals>
                        <configuration>
                            <sourceRoot>${project.build.directory}/generated-sources/cxf</sourceRoot>
                            <defaultOptions>
                                <markGenerated>true</markGenerated>
                                <extraargs>
                                    <extraarg>-exsh</extraarg>
                                    <extraarg>true</extraarg>
                                </extraargs>
                                <bindingFiles>
                                    <bindingFile>${basedir}/src/main/resources/jaxb_bindings.xml</bindingFile>
                                    <!-- Grouped schema bindings -->
                                    <bindingFile>${basedir}/src/main/resources/wsdl/connection/ogf_nsi_connection_types_v2_0.xsd</bindingFile>
                                    <bindingFile>${basedir}/src/main/resources/wsdl/connection/ogf_nsi_framework_headers_v2_0.xsd</bindingFile>
                                    <bindingFile>${basedir}/src/main/resources/wsdl/connection/ogf_nsi_framework_types_v2_0.xsd</bindingFile>
                                    <bindingFile>${basedir}/src/main/resources/wsdl/connection/ogf_nsi_services_definition_v2_0.xsd</bindingFile>
                                    <bindingFile>${basedir}/src/main/resources/wsdl/connection/ogf_nsi_services_p2p_v2_0.xsd</bindingFile>
                                    <bindingFile>${basedir}/src/main/resources/wsdl/connection/pathtrace.xsd</bindingFile>
                                </bindingFiles>
                            </defaultOptions>
                            <wsdlOptions>
                                <wsdlOption>
                                    <wsdl>${basedir}/src/main/resources/wsdl/connection/ogf_nsi_connection_provider_v2_0.wsdl</wsdl>
                                    <wsdlLocation>/wsdl/connection/ogf_nsi_connection_provider_v2_0.wsdl</wsdlLocation>
                                    <extraargs>
                                        <extraarg>-p</extraarg>
                                        <extraarg>nl.surf.polynsi.soap.connection.provider</extraarg>
                                    </extraargs>
                                </wsdlOption>
                                <wsdlOption>
                                    <wsdl>${basedir}/src/main/resources/wsdl/connection/ogf_nsi_connection_requester_v2_0.wsdl</wsdl>
                                    <wsdlLocation>/wsdl/connection/ogf_nsi_connection_requester_v2_0.wsdl</wsdlLocation>
                                    <extraargs>
                                        <extraarg>-p</extraarg>
                                        <extraarg>nl.surf.polynsi.soap.connection.requester</extraarg>
                                    </extraargs>
                                </wsdlOption>
                            </wsdlOptions>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Release Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>3.1.1</version>
                <configuration>
                    <tagNameFormat>@{project.version}</tagNameFormat>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                </configuration>
            </plugin>

        </plugins>
    </build>
</project>
